--- a/Frontend/app/package.json
+++ b/Frontend/app/package.json
@@ -5,35 +5,26 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@coreui/chartjs": "^4.0.0",
-    "@coreui/coreui": "^5.0.2",
-    "@coreui/icons": "^3.0.1",
-    "@coreui/icons-react": "^2.2.1",
-    "@coreui/react": "^5.1.0",
+    "@chakra-ui/system": "^2.6.2",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
-    "core-js": "^3.37.1",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "simplebar-react": "^3.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
